# Template-Python-Base-MCP-Server

./: .pre-commit-config.yaml  pyproject.toml  ruff.toml
.github/workflows/: docker-ci.yml  docs-build-check.yaml  documentation.yaml
docs/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
docs/contents/development/: requirements.mdx
docs/contents/document/: architecture.mdx  best-practices.mdx  deployment.mdx  documentation-overview.mdx  examples.mdx  getting-started-summary.mdx  introduction.mdx  sidebars.ts  troubleshooting.mdx  usage-guide.mdx
docs/contents/document/api-references/: index.mdx
docs/contents/document/contribute/: index.mdx
docs/contents/document/quick-start/: how-to-run.mdx  index.mdx  installation.mdx
src/: __init__.py  _base.py  config.py  entry.py
src/integrate/: __init__.py  app.py
src/mcp/: __init__.py  app.py
src/mcp/tools/: __init__.py
src/models/: __init__.py  cli.py
src/models/dto/: __init__.py  health_check.py
src/web_server/: __init__.py  app.py
src/web_server/dependencies/: __init__.py
src/web_server/models/dto/: __init__.py
src/web_server/models/request/: __init__.py
src/web_server/routers/: __init__.py
src/web_server/services/: __init__.py
test/unit_test/: test_entry.py  test_settings.py
test/unit_test/integrate/: test_factory.py
test/unit_test/mcp/: test_factory.py
test/unit_test/models/: test_models.py
test/unit_test/web_server/: test_factory.py
