[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-template"
version = "0.0.0"
description = "ðŸ Just a template of Python bases and UV managed MCP server project."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Chisanan232/Template-Python-Base-MCP-Server"
Repository = "https://github.com/Chisanan232/Template-Python-Base-MCP-Server"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0,<8",
    "pytest-asyncio>=1.1.0",
    "coverage>=7.10.6",
    "pytest-rerunfailures>=16.0.1",
    "aiohttp>=3.12.15",
    "pytest-asyncio>=1.1.0",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]
packages = ["src"]
#artifacts = ["slack_mcp/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]
#artifacts = ["slack_mcp/py.typed"]
